卡片组样式

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,11 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 page {
   background-color: #fdbf0a;
+}
+
+view {
+  box-sizing: border-box;
 }
